--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "prebuild": "rimraf packages/**/dist",
     "build": "tsc --project tsconfig.json && bob build",
     "test": "jest --passWithNoTests",
+    "prerelease": "yarn build",
+    "release": "changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary..."
   },
   "repository": {
