--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,7 +47,7 @@
     "@envelop/disable-introspection": "^1.2.1",
     "@envelop/parser-cache": "^2.2.1",
     "@envelop/validation-cache": "^2.2.1",
-    "@graphql-yoga/handler": "workspace:*",
+    "@graphql-yoga/handler": "0.1.0",
     "ts-log": "^2.2.4"
   },
   "devDependencies": {
