--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -45,8 +45,8 @@
     "@ardatan/graphql-helix": "0.0.6",
     "@envelop/core": "^1.6.2",
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@graphql-yoga/core": "workspace:*",
-    "@graphql-yoga/handler": "workspace:*",
+    "@graphql-yoga/core": "0.1.0",
+    "@graphql-yoga/handler": "0.1.0",
     "cross-undici-fetch": "^0.1.4",
     "fastify": "^3.24.0",
     "fastify-cors": "^6.0.2",
