--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "format": "prettier . --write",
     "prebuild": "rimraf packages/**/dist",
-    "build": "tsc --project tsconfig.json && bob build",
+    "build": "tsc --project tsconfig.build.json && bob build",
     "test": "jest --passWithNoTests",
     "prerelease": "yarn build",
     "release": "changeset publish",
