--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,6 @@
 {
   "name": "website",
+  "private": "true",
   "scripts": {
     "build": "next build",
     "dev": "concurrently -r \"next-remote-watch ./docs ./routes.ts ./src/pages/_app.tsx ./src/pages/_document.tsx\" \"wait-on -s 1 http://localhost:3000 && open-cli http://localhost:3000\"",
