--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
     "@types/supertest": "^2.0.11",
     "babel-jest": "^27.3.1",
     "bob-the-bundler": "^1.5.1",
+    "graphql": "16.1.0",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
     "typescript": "^4.4.4"
+  },
+  "resolutions": {
+    "graphql": "16.1.0"
   }
 }
