--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "@next/bundle-analyzer": "^12.0.6",
     "@types/concurrently": "^6.4.0",
     "@types/mdx-js__react": "^1.5.5",
+    "@types/node": "^16.11.7",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "bob-tsm": "^0.3.6",
