--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
     "format": "prettier . --write",
+    "pretty-quick": "pretty-quick --staged",
     "prebuild": "rimraf packages/*/dist",
     "build": "tsc --project tsconfig.build.json && bob build",
     "test": "jest --passWithNoTests",
     "release": "yarn build && changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
-    "start:docs": "yarn workspace @graphql-yoga/website dev"
+    "start:docs": "yarn workspace @graphql-yoga/website dev",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -47,8 +49,10 @@
     "babel-jest": "^27.3.1",
     "bob-the-bundler": "^1.5.1",
     "graphql": "16.1.0",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.2",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
     "typescript": "^4.4.4"
