--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "release": "yarn build && changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
     "start:docs": "yarn workspace @graphql-yoga/website dev",
-    "postinstall": "husky install"
+    "postinstall": "patch-package && husky install"
   },
   "repository": {
     "type": "git",
@@ -53,6 +53,7 @@
     "graphql": "^16.1.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "patch-package": "^6.4.7",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.2",
     "rimraf": "^3.0.2",
