--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "release": "yarn build && changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
     "start:docs": "yarn workspace @graphql-yoga/website dev",
-    "postinstall": "husky install"
+    "postinstall": "patch-package && husky install"
   },
   "repository": {
     "type": "git",
@@ -43,7 +43,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
-    "@changesets/cli": "2.18.1",
+    "@changesets/cli": "2.17.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^27.0.2",
@@ -53,6 +53,7 @@
     "graphql": "^16.1.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "patch-package": "^6.4.7",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.2",
     "rimraf": "^3.0.2",
@@ -60,6 +61,7 @@
     "typescript": "^4.4.4"
   },
   "resolutions": {
+    "@changesets/apply-release-plan": "5.0.1",
     "graphql": "16.1.0"
   }
 }
