--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-yoga",
-  "version": "2.0.0-alpha.0",
+  "version": "1.18.3",
   "description": "",
   "repository": {
     "type": "git",
