--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,8 +47,7 @@
     "@envelop/parser-cache": "^2.2.1",
     "@envelop/validation-cache": "^2.2.1",
     "@graphql-tools/schema": "8.3.1",
-    "@graphql-yoga/handler": "0.2.0-alpha.0",
-    "ts-log": "^2.2.4"
+    "@graphql-yoga/handler": "0.2.0-alpha.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
