use EventTarget and Event for the PubSub implementation

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -47,6 +47,8 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "0.2.0-alpha.1",
     "@graphql-yoga/handler": "0.2.0-alpha.0",
+    "@ungap/event": "^0.2.2",
+    "@ungap/event-target": "^0.2.3",
     "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
