--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -47,6 +47,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "0.2.0-alpha.1",
     "@graphql-yoga/handler": "0.2.0-alpha.0",
+    "@n1ru4l/push-pull-async-iterable-iterator": "^3.1.0",
     "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
