--- a/examples/subscriptions/package.json
+++ b/examples/subscriptions/package.json
@@ -1,8 +1,14 @@
 {
+  "name": "subscriptions-example",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "node ."
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
-    "graphql-yoga": "1.2.0"
+    "graphql": "^16.1.0",
+    "graphql-yoga": "2.0.0-alpha.2",
+    "ts-node": "10.4.0",
+    "typescript": "^4.4.4"
   }
 }
