--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
+      - name: Checkout Main
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Use Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
