--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -67,8 +67,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "event-target-polyfill": "0.0.3",
-    "bob-the-bundler": "2.0.0-canary-57a6054.0"
+    "event-target-polyfill": "0.0.3"
   },
   "type": "module"
 }
