--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,3 +106,6 @@ jobs:
 
       - name: Typecheck
         run: yarn run check
+
+      - name: Test ESM & CJS exports integrity
+        run: yarn bob check
