--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -10,9 +10,9 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "bin": {
-    "gql-yoga": "dist/bin.js",
-    "graphql-yoga": "dist/bin.js",
-    "yoga": "dist/bin.js"
+    "gql-yoga": "dist/cjs/bin.js",
+    "graphql-yoga": "dist/cjs/bin.js",
+    "yoga": "dist/cjs/bin.js"
   },
   "scripts": {
     "prepack": "bob prepack",
@@ -26,14 +26,6 @@
   ],
   "author": "Saihajpreet Singh <saihajpreet.singh@gmail.com> (https://saihaj.dev/)",
   "license": "MIT",
-  "buildOptions": {
-    "input": "./src/index.ts",
-    "bin": {
-      "graphql-yoga": {
-        "input": "src/bin.ts"
-      }
-    }
-  },
   "exports": {
     ".": {
       "require": {
@@ -47,20 +39,6 @@
       "default": {
         "types": "./dist/typings/index.d.ts",
         "default": "./dist/esm/index.js"
-      }
-    },
-    "./*": {
-      "require": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/cjs/*.js"
-      },
-      "import": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
-      },
-      "default": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
       }
     },
     "./package.json": "./package.json"
