--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -52,9 +52,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@graphql-tools/code-file-loader": "^7.2.3",
-    "@graphql-tools/mock": "^8.6.3",
-    "@graphql-yoga/node": "2.9.2",
+    "@graphql-tools/code-file-loader": "^7.3.0",
+    "@graphql-tools/mock": "^8.7.0",
+    "@graphql-yoga/node": "^2.9.2",
     "graphql-config": "^4.1.0",
     "tslib": "^2.3.1",
     "yargs": "^17.3.0"
