--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -63,16 +63,16 @@
     "access": "public"
   },
   "dependencies": {
-    "@envelop/core": "^2.0.0",
-    "@graphql-tools/utils": "^8.6.0",
-    "@graphql-yoga/common": "2.8.3",
-    "@graphql-yoga/subscription": "2.0.0",
+    "@envelop/core": "^2.4.0",
+    "@graphql-tools/utils": "^8.8.0",
+    "@graphql-yoga/common": "^2.8.3",
+    "@graphql-yoga/subscription": "^2.0.0",
     "cross-undici-fetch": "^0.4.2",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@envelop/disable-introspection": "3.3.3",
-    "@envelop/live-query": "3.3.3",
+    "@envelop/disable-introspection": "^3.4.0",
+    "@envelop/live-query": "^3.4.0",
     "@types/eventsource": "1.1.9",
     "@types/node": "16.11.7",
     "eventsource": "2.0.2",
