--- a/examples/aws-lambda/tsconfig.json
+++ b/examples/aws-lambda/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ES2018",
+    "moduleResolution": "node",
     "module": "commonjs",
     "lib": ["es2018"],
     "declaration": true,
