--- a/packages/event-target/redis-event-target/package.json
+++ b/packages/event-target/redis-event-target/package.json
@@ -30,28 +30,28 @@
     "ioredis-mock": "8.2.2"
   },
   "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/_cjs/index.js",
+  "module": "dist/_esm/index.js",
   "exports": {
     ".": {
       "require": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/cjs/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_cjs/index.js"
       },
       "import": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_esm/index.js"
       },
       "default": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_esm/index.js"
       }
     },
     "./package.json": "./package.json"
   },
-  "typings": "dist/typings/index.d.ts",
+  "typings": "dist/index.d.ts",
   "typescript": {
-    "definition": "dist/typings/index.d.ts"
+    "definition": "dist/index.d.ts"
   },
   "publishConfig": {
     "directory": "dist",
