--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/node"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/_cjs/index.js",
+  "module": "dist/_esm/index.js",
   "scripts": {
     "check": "tsc --pretty --noEmit"
   },
@@ -26,51 +26,51 @@
   "exports": {
     ".": {
       "require": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/cjs/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_cjs/index.js"
       },
       "import": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_esm/index.js"
       },
       "default": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_esm/index.js"
       }
     },
     "./schema": {
       "require": {
-        "types": "./dist/typings/schema.d.ts",
-        "default": "./dist/cjs/schema.js"
+        "types": "./dist/schema.d.ts",
+        "default": "./dist/_cjs/schema.js"
       },
       "import": {
-        "types": "./dist/typings/schema.d.ts",
-        "default": "./dist/esm/schema.js"
+        "types": "./dist/schema.d.ts",
+        "default": "./dist/_esm/schema.js"
       },
       "default": {
-        "types": "./dist/typings/schema.d.ts",
-        "default": "./dist/esm/schema.js"
+        "types": "./dist/schema.d.ts",
+        "default": "./dist/_esm/schema.js"
       }
     },
     "./subscription": {
       "require": {
-        "types": "./dist/typings/subscription.d.ts",
-        "default": "./dist/cjs/subscription.js"
+        "types": "./dist/subscription.d.ts",
+        "default": "./dist/_cjs/subscription.js"
       },
       "import": {
-        "types": "./dist/typings/subscription.d.ts",
-        "default": "./dist/esm/subscription.js"
+        "types": "./dist/subscription.d.ts",
+        "default": "./dist/_esm/subscription.js"
       },
       "default": {
-        "types": "./dist/typings/subscription.d.ts",
-        "default": "./dist/esm/subscription.js"
+        "types": "./dist/subscription.d.ts",
+        "default": "./dist/_esm/subscription.js"
       }
     },
     "./package.json": "./package.json"
   },
-  "typings": "dist/typings/index.d.ts",
+  "typings": "dist/index.d.ts",
   "typescript": {
-    "definition": "dist/typings/index.d.ts"
+    "definition": "dist/index.d.ts"
   },
   "publishConfig": {
     "directory": "dist",
