--- a/packages/render-graphiql/package.json
+++ b/packages/render-graphiql/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/render-graphiql"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/_cjs/index.js",
+  "module": "dist/_esm/index.js",
   "scripts": {
     "build": "node scripts/yoga-bundle-string.mjs",
     "check": "tsc --pretty --noEmit"
@@ -27,37 +27,37 @@
   "exports": {
     ".": {
       "require": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/cjs/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_cjs/index.js"
       },
       "import": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_esm/index.js"
       },
       "default": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_esm/index.js"
       }
     },
     "./*": {
       "require": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/cjs/*.js"
+        "types": "./dist/*.d.ts",
+        "default": "./dist/_cjs/*.js"
       },
       "import": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
+        "types": "./dist/*.d.ts",
+        "default": "./dist/_esm/*.js"
       },
       "default": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
+        "types": "./dist/*.d.ts",
+        "default": "./dist/_esm/*.js"
       }
     },
     "./package.json": "./package.json"
   },
-  "typings": "dist/typings/index.d.ts",
+  "typings": "dist/index.d.ts",
   "typescript": {
-    "definition": "dist/typings/index.d.ts"
+    "definition": "dist/index.d.ts"
   },
   "publishConfig": {
     "directory": "dist",
