--- a/packages/urql-exchange/package.json
+++ b/packages/urql-exchange/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/urql-exchange"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/_cjs/index.js",
+  "module": "dist/_esm/index.js",
   "scripts": {
     "check": "tsc --pretty --noEmit"
   },
@@ -26,23 +26,23 @@
   "exports": {
     ".": {
       "require": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/cjs/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_cjs/index.js"
       },
       "import": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_esm/index.js"
       },
       "default": {
-        "types": "./dist/typings/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/_esm/index.js"
       }
     },
     "./package.json": "./package.json"
   },
-  "typings": "dist/typings/index.d.ts",
+  "typings": "dist/index.d.ts",
   "typescript": {
-    "definition": "dist/typings/index.d.ts"
+    "definition": "dist/index.d.ts"
   },
   "publishConfig": {
     "directory": "dist",
