--- a/examples/cloudflare-advanced/package.json
+++ b/examples/cloudflare-advanced/package.json
@@ -12,7 +12,7 @@
     "graphql": "16.5.0"
   },
   "devDependencies": {
-    "@cloudflare/wrangler": "1.19.12",
+    "wrangler": "2.0.23",
     "typescript": "4.7.4",
     "ts-loader": "9.3.1",
     "webpack": "5.74.0"
