--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "experimentalDecorators": true,
     "module": "node16",
     "target": "ES2020",
-    "lib": ["esnext", "webworker"],
+    "lib": ["esnext"],
     "suppressImplicitAnyIndexErrors": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
