--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -20,7 +20,9 @@
     "**/*.ts",
     "**/*.tsx",
     "src/pages/docs/[[...slug]].tsx.old",
-    "src/pages/tutorial/[[...slug]].tsx.old"
+    "src/pages/tutorial/[[...slug]].tsx.old",
+    "src/pages/v3/tutorial/[[...slug]].tsx.old",
+    "src/pages/v3/docs/[[...slug]].tsx.old"
   ],
   "exclude": ["node_modules"]
 }
