--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "check": "yarn workspaces run check",
     "build": "yarn workspace @graphql-yoga/graphiql run build && yarn workspace @graphql-yoga/render-graphiql run build && yarn workspace graphql-yoga run generate-graphiql-html && bob build",
     "test": "jest --passWithNoTests --forceExit",
+    "test:integration": "cross-env INTEGRATION_TEST=true jest --passWithNoTests --forceExit",
     "release": "yarn build && changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
     "start:docs": "yarn workspace website dev",
@@ -74,13 +75,14 @@
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
     "bob-the-bundler": "4.0.0",
+    "cross-env": "7.0.3",
     "eslint": "^8.15.0",
     "graphql": "^16.5.0",
     "husky": "^8.0.0",
     "jest": "^28.0.0",
+    "lint-staged": "^13.0.3",
     "patch-package": "^6.4.7",
     "prettier": "^2.4.1",
-    "lint-staged": "^13.0.3",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
     "ts-jest": "^28.0.0",
