--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "bob-the-bundler": "4.0.0",
     "cross-env": "7.0.3",
     "eslint": "^8.15.0",
+    "get-port": "5.1.1",
     "graphql": "^16.5.0",
     "husky": "^8.0.0",
     "jest": "^28.0.0",
