--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,41 @@ jobs:
       - name: Run Tests
         run: yarn test
 
+  test-integration:
+    name: Run integration tests
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14, 16, 18]
+      fail-fast: false
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Use Node ${{ matrix.node-version }}
+        uses: actions/setup-node@master
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        id: node-modules-cache-test-node
+        with:
+          path: '**/node_modules'
+          key: ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
+          restore-keys: |
+            ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
+      - name: Install Dependencies using Yarn
+        run: yarn install --ignore-engines --frozen-lockfile --immutable
+        if: steps.node-modules-cache-test-node.outputs.cache-hit != 'true'
+
+      - name: Build Packages
+        run: yarn build
+
+      - name: Run Tests
+        run: yarn test:integration
+
   test-esm:
     name: Testing with Node ESM
     runs-on: ubuntu-latest
@@ -74,8 +109,7 @@ jobs:
         run: yarn build
 
       - name: Run Tests
-        working-directory: ./examples/node-esm
-        run: yarn test
+        run: yarn workspace example-node-esm run test
 
   typecheck:
     name: Typecheck
