--- a/package.json
+++ b/package.json
@@ -84,10 +84,7 @@
     "typescript": "4.7.4"
   },
   "resolutions": {
-    "graphql": "16.6.0",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "18.0.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@changesets/apply-release-plan": "6.0.0",
+    "graphql": "16.6.0"
   }
 }
