--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -63,7 +63,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@envelop/core": "^2.4.0",
+    "@envelop/core": "^2.5.0",
     "@graphql-tools/utils": "^8.8.0",
     "@graphql-yoga/common": "^2.12.5",
     "@graphql-yoga/subscription": "^2.2.3",
@@ -71,8 +71,8 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@envelop/disable-introspection": "^3.4.0",
-    "@envelop/live-query": "^4.0.0",
+    "@envelop/disable-introspection": "3.5.0",
+    "@envelop/live-query": "4.1.0",
     "@types/eventsource": "1.1.9",
     "@types/node": "16.11.49",
     "eventsource": "2.0.2",
