--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graphql-yoga-monorepo",
   "private": true,
   "scripts": {
-    "preinstall": "node scripts/align-workspaces.js",
+    "align-workspaces": "node scripts/align-workspaces.js",
     "prebuild": "rimraf packages/*/dist",
     "check": "pnpm workspaces run check",
     "build": "pnpm workspace @graphql-yoga/graphiql run build && pnpm workspace @graphql-yoga/render-graphiql run build && pnpm workspace graphql-yoga run generate-graphiql-html && bob build",
