--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Fetch
-        run: git fetch origin v3
+        run: git fetch origin main
 
       - name: Setup env
         uses: the-guild-org/shared-config/setup@main
