--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Fetch
-        run: git fetch origin v3
+        run: git fetch origin main
 
       - name: Setup env
         uses: the-guild-org/shared-config/setup@main
