--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,7 @@ env:
 on:
   push:
     branches:
-      - 'v2'
-      - 'v3'
+      - main
   pull_request:
     paths-ignore:
       - 'website/**'
