--- a/examples/pothos/package.json
+++ b/examples/pothos/package.json
@@ -12,6 +12,7 @@
     "graphql": "16.6.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
     "ts-node": "10.9.1",
     "typescript": "4.9.3"
   }
