chore: bump validation cache version

--- a/package.json
+++ b/package.json
@@ -109,8 +109,7 @@
     "overrides": {
       "graphql": "16.6.0",
       "@envelop/core": "3.0.4",
-      "@changesets/assemble-release-plan": "5.2.1",
-      "@envelop/validation-cache": "5.0.5-alpha-20221216222744-232e3b3d"
+      "@changesets/assemble-release-plan": "5.2.1"
     }
   }
 }
