--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -50,8 +50,8 @@
   },
   "dependencies": {
     "@envelop/core": "3.0.4",
-    "@envelop/parser-cache": "5.0.4",
-    "@envelop/validation-cache": "5.0.4",
+    "@envelop/parser-cache": "^5.0.4",
+    "@envelop/validation-cache": "^5.0.5",
     "@graphql-tools/executor": "0.0.9",
     "@graphql-tools/schema": "^9.0.0",
     "@graphql-tools/utils": "^9.0.1",
